--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gabriel da Silva Dias">
-    <meta name="description", content="Teoria e psicologia das cores.">
-    <meta name="keywords", content="programação, html, css, javascript, newton, 1664">
+    <meta name="description", content="Energia Fotovoltaica.">
+    <meta name="keywords", content="programação, html, css, javascript, energia reno'vavel">
 
     <link rel="preload" href="CSS/style.css" as="style">
     <link rel="preload" href="JS/index.js" as="script">
