--- a/db.html
+++ b/db.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gabriel da Silva Dias">
-    <meta name="description", content="Teoria e psicologia das cores.">
-    <meta name="keywords", content="programação, html, css, javascript, newton, 1664">
+    <meta name="description", content="Energia Fotovoltaica.">
+    <meta name="keywords", content="programação, html, css, javascript, energia reno'vavel">
 
     <link rel="preload" href="CSS/style.css" as="style">
     <link rel="preload" href="JS/index.js" as="script">
@@ -24,6 +24,11 @@
         
         <div class="partes">
             <div class="partes">
+                <a href="apr.html">
+                    <div id="menus">
+                        <h5>Apresentação</h4>
+                    </div>
+                </a>
                 <a href="index.html">
                     <div id="menus">
                         <h5>Introdução</h4>
@@ -42,11 +47,6 @@
                 <a href="gal.html">
                     <div id="menus">
                         <h5>Galeria</h4>
-                    </div>
-                </a>
-                <a href="eqp.html">
-                    <div id="menus">
-                        <h5>Equipe</h4>
                     </div>
                 </a>
                 <a href="db.html">
