--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         
         <div class="partes">
             <div class="partes">
+                <a href="apr.html">
+                    <div id="menus">
+                        <h5>Apresentação</h4>
+                    </div>
+                </a>
                 <a href="index.html">
                     <div id="menus">
                         <h5>Introdução</h4>
@@ -42,11 +47,6 @@
                 <a href="gal.html">
                     <div id="menus">
                         <h5>Galeria</h4>
-                    </div>
-                </a>
-                <a href="eqp.html">
-                    <div id="menus">
-                        <h5>Equipe</h4>
                     </div>
                 </a>
                 <a href="db.html">
