--- a/db.html
+++ b/db.html
@@ -152,7 +152,7 @@
         <div class="sobre" id="sobre">
             <h1>Direitos reservados</h1>
                 <p>Escola Municipal de Ensino Fundamental Nossa Senhora Medianeira</p>  
-            <p class="copy">&copy; Gabriel Da Silva Dias / 2023</p>
+            <p class="copy">&copy; Arcane Studios / 2023</p>
         </div>
     
 </body>
