--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <h2>Pergunta norteadora</h2>
 
                 <p>
-                    &nbsp;&nbsp;&nbsp;&nbsp;Buscar através da pesquisa como eliminar a utilização de energia não renovável no Brasil e no mundo, como conscientizar a população a investir neste tipo de energia, pois ainda 56,5% da energia gerada no Brasil é não renovável e poluente, e buscar na escola a quantidade de energia gasta por mês e fazer um projeto solar para apresentar como iria ficar de tivessem placas na escola.<br> <br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;Como podemos projetar e implementar um sistema de energia solar eficiente e sustentável para atender às necessidades energéticas da escola, reduzindo os custos operacionais e promovendo a educação ambiental?<br> <br>
                 </p>
             </section>
 
