--- a/des.html
+++ b/des.html
@@ -104,7 +104,7 @@
                 <h2>Objetivos</h2>
 
                 <p>
-                    &nbsp;&nbsp;&nbsp;&nbsp;Com tudo, nosso <b>principal</b> objetivo é conscientizar a população dos malefícios causados pela energia elétrica ao meio ambiente, buscando ressaltar as vantagens da energia solar tanto para o meio ambiente quanto para o bolso da população. Será analisado também a viabilidade de implementação de placa solar no novo prédio da escola.
+                    &nbsp;&nbsp;&nbsp;&nbsp;Implantar um sistema de energia solar renovável e eficiente que forneça uma fonte sustentável de eletricidade para a escola, reduzindo significativamente sua dependência de fontes de energia não renováveis e promovendo a conscientização ambiental entre os alunos e a comunidade escolar.
                 </p>
 
             </section>
