--- a/apr.html
+++ b/apr.html
@@ -77,7 +77,7 @@
                     <br>
                     <br>
 
-                    Allyson Fraga, Gabriel Correia e Gabriel Dias.
+                    Ályson Fraga, Gabriel Correia e Gabriel Dias.
                 </p>
             </section>
 
